# checklist-dependency-sorter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  pyproject.toml
src/checklist_sorter/: __init__.py  cli.py  sorter.py
tests/: test_sorter.py
